--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "author": "dilip",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
